--- a/presigned_url_sqs_event_stack/package.yaml
+++ b/presigned_url_sqs_event_stack/package.yaml
@@ -17,7 +17,7 @@ Resources:
     Properties:
       Name: UploadApi
       StageName: Prod
-      DefinitionUri: s3://dakobed-serverless-apis/6a1eb8ecb9421eb9495eb1ba50f69290
+      DefinitionUri: s3://dakobed-serverless-apis/1dae8c2e1b633149a48a8b56eae567fe
   PresignedPostUploadFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -111,3 +111,24 @@ Resources:
                 Fn::Sub: arn:aws:s3:::${BucketName}
       Queues:
       - Ref: TransformQueue
+Outputs:
+  UploadApi:
+    Description: API Gateway endpoint URL for Prod stage upload API
+    Value:
+      Fn::Sub: https://${UploadApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/signedURL
+    Export:
+      Name:
+        Fn::Join:
+        - ':'
+        - - Ref: AWS::StackName
+          - UploadApi
+  S3UploadBucket:
+    Description: API Gateway endpoint URL for Prod stage upload API
+    Value:
+      Ref: BucketName
+    Export:
+      Name:
+        Fn::Join:
+        - ':'
+        - - Ref: AWS::StackName
+          - S3UploadBucket
