--- a/presigned_url_sqs_event_stack/template.yaml
+++ b/presigned_url_sqs_event_stack/template.yaml
@@ -66,6 +66,64 @@ Resources:
       FunctionName: !Ref PresignedPostUploadFunction
       Principal: apigateway.amazonaws.com
 
+  VerifyUploadFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Timeout: 10
+      FunctionName: VerifyUploadFunction
+      Policies:
+        - SQSSendMessagePolicy:
+            QueueName: InitiateTransformsQueue
+        - AWSLambdaBasicExecutionRole
+        - DynamoDBCrudPolicy:
+            TableName: !Ref UserUploadTable
+      CodeUri: handlers/signedURL
+      Handler: app.lambda_handler
+      Runtime: python3.7
+
+      Layers:
+        - !ImportValue upload-authorization-layer-stack:AuthorizationLayer
+
+      Environment:
+        Variables:
+          userpool_id: !ImportValue upload-api-userpool-stack:UserPool
+          app_client_id: !ImportValue upload-api-userpool-stack:UserPoolClient
+          region: !Ref Region
+
+      Events:
+        UploadApi:
+          Type: Api
+          Properties:
+            RestApiId: !Ref UploadApi
+            Path: /signedURL
+            Method: POST
+
+  UserUploadTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: !Sub "${AWS::StackName}-UserUploads"
+        AttributeDefinitions:
+          -
+            AttributeName: "user"
+            AttributeType: "S"
+          -
+            AttributeName: "filename"
+            AttributeType: "S"
+
+        KeySchema:
+          -
+            AttributeName: "user"
+            KeyType: "HASH"
+          -
+            AttributeName: "filename"
+            KeyType: "RANGE"
+
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+
+
+
   S3UploadBucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -109,7 +167,6 @@ Resources:
       Queues:
         - !Ref TransformQueue
 
-
 Outputs:
   UploadApi:
     Description: "API Gateway endpoint URL for Prod stage upload API"
@@ -122,3 +179,9 @@ Outputs:
     Value: !Ref BucketName
     Export:
       Name: !Join [ ':', [ !Ref 'AWS::StackName', 'S3UploadBucket' ] ]
+
+  UserUploadTable:
+    Description: "API Gateway endpoint URL for Prod stage upload API"
+    Value: !Ref UserUploadTable
+    Export:
+      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'UserUploadTable' ] ]
