--- a/presigned_url_sqs_event_stack/template.yaml
+++ b/presigned_url_sqs_event_stack/template.yaml
@@ -66,37 +66,6 @@ Resources:
       FunctionName: !Ref PresignedPostUploadFunction
       Principal: apigateway.amazonaws.com
 
-  VerifyUploadFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      Timeout: 10
-      FunctionName: VerifyUploadFunction
-      Policies:
-        - SQSSendMessagePolicy:
-            QueueName: InitiateTransformsQueue
-        - AWSLambdaBasicExecutionRole
-        - DynamoDBCrudPolicy:
-            TableName: !Ref UserUploadTable
-      CodeUri: handlers/signedURL
-      Handler: app.lambda_handler
-      Runtime: python3.7
-
-      Layers:
-        - !ImportValue upload-authorization-layer-stack:AuthorizationLayer
-
-      Environment:
-        Variables:
-          userpool_id: !ImportValue upload-api-userpool-stack:UserPool
-          app_client_id: !ImportValue upload-api-userpool-stack:UserPoolClient
-          region: !Ref Region
-
-      Events:
-        UploadApi:
-          Type: Api
-          Properties:
-            RestApiId: !Ref UploadApi
-            Path: /signedURL
-            Method: POST
 
   UserUploadTable:
       Type: AWS::DynamoDB::Table
@@ -122,16 +91,18 @@ Resources:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
 
-
-
   S3UploadBucket:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: !Ref BucketName
       NotificationConfiguration:
-        QueueConfigurations:
+#        QueueConfigurations:
+#          - Event: s3:ObjectCreated:Post
+#            Queue: !GetAtt TransformQueue.Arn
+        LambdaConfigurations:
           - Event: s3:ObjectCreated:Post
-            Queue: !GetAtt TransformQueue.Arn
+            Function: !GetAtt VerifyUploadFunction.Arn
+
       CorsConfiguration:
         CorsRules:
         - AllowedHeaders:
@@ -143,6 +114,75 @@ Resources:
             - POST
           AllowedOrigins:
             - "*"
+            -
+  VerifyUploadFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Timeout: 10
+      FunctionName: VerifyUploadFunction
+      Policies:
+        - SQSSendMessagePolicy:
+            QueueName: InitiateTransformsQueue
+        - AWSLambdaBasicExecutionRole
+        - DynamoDBCrudPolicy:
+            TableName: !Ref UserUploadTable
+      CodeUri: handlers/verify_upload
+      Handler: app.lambda_handler
+      Runtime: python3.7
+      Role: !GetAtt LambdaIAMRole.Arn
+      Layers:
+        - !ImportValue upload-authorization-layer-stack:AuthorizationLayer
+
+      Environment:
+        Variables:
+          userpool_id: !ImportValue upload-api-userpool-stack:UserPool
+          app_client_id: !ImportValue upload-api-userpool-stack:UserPoolClient
+          region: !Ref Region
+          user_upload_table: !Ref UserUploadTable
+
+#      Events:
+#        UploadApi:
+#          Type: Api
+#          Properties:
+#            RestApiId: !Ref UploadApi
+#            Path: /uploads/verify
+#            Method: POST
+
+
+
+  LambdaIAMRole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+            Action:
+              - 'sts:AssumeRole'
+      Path: /
+      Policies:
+        - PolicyName: root
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action:
+                  - 's3:GetBucketNotification'
+                  - 's3:PutBucketNotification'
+                  - 's3:PostBucketNotification'
+                Resource: !Sub 'arn:aws:s3:::${BucketName}'
+              - Effect: Allow
+                Action:
+                  - 'logs:CreateLogGroup'
+                  - 'logs:CreateLogStream'
+                  - 'logs:PutLogEvents'
+                Resource: 'arn:aws:logs:*:*:*'
+
+
+
 
   TransformQueue:
     Type: AWS::SQS::Queue
