--- a/upload_api/upload_event_stack/package.yaml
+++ b/upload_api/upload_event_stack/package.yaml
@@ -2,10 +2,22 @@ AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: Dakobed Rest API Service
 Parameters:
+  Region:
+    Type: String
+    Default: us-west-2
+  QueueName:
+    Type: String
+    Default: LibrosaTransformsQueue
   BucketName:
     Type: String
     Default: dakobed-mir-upload-bucket
 Resources:
+  UploadApi:
+    Type: AWS::Serverless::Api
+    Properties:
+      Name: UploadApi
+      StageName: Prod
+      DefinitionUri: s3://dakobed-serverless-apis/1dae8c2e1b633149a48a8b56eae567fe
   Bucket:
     Type: AWS::S3::Bucket
     DependsOn:
@@ -20,6 +32,53 @@ Resources:
             Fn::GetAtt:
             - VerifyUploadFunction
             - Arn
+  PresignedPostUploadFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Timeout: 10
+      FunctionName: PresignedPostUploadFunction
+      Policies:
+      - S3CrudPolicy:
+          BucketName:
+            Ref: BucketName
+      - SQSSendMessagePolicy:
+          QueueName: InitiateTransformsQueue
+      - AWSLambdaBasicExecutionRole
+      - DynamoDBCrudPolicy:
+          TableName: UserUploads
+      CodeUri: s3://dakobed-serverless-apis/7c3a086099e2a2e854b5f3c5ce987744
+      Handler: app.lambda_handler
+      Runtime: python3.7
+      Layers:
+      - Fn::ImportValue: upload-authorization-layer-stack:AuthorizationLayer
+      Environment:
+        Variables:
+          UploadBucket:
+            Ref: BucketName
+          userpool_id:
+            Fn::ImportValue: upload-api-userpool-stack:UserPool
+          app_client_id:
+            Fn::ImportValue: upload-api-userpool-stack:UserPoolClient
+          region:
+            Ref: Region
+      Events:
+        UploadApi:
+          Type: Api
+          Properties:
+            RestApiId:
+              Ref: UploadApi
+            Path: /signedURL
+            Method: POST
+  GatewayInvokeLambdaPermission:
+    Type: AWS::Lambda::Permission
+    DependsOn:
+    - UploadApi
+    - PresignedPostUploadFunction
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName:
+        Ref: PresignedPostUploadFunction
+      Principal: apigateway.amazonaws.com
   ProcessingLambdaPermission:
     Type: AWS::Lambda::Permission
     Properties:
