--- a/upload_api/upload_event_stack/template.yaml
+++ b/upload_api/upload_event_stack/template.yaml
@@ -5,10 +5,25 @@ Description: Dakobed Rest API Service
 
 
 Parameters:
+  Region:
+    Type: String
+    Default: us-west-2
+  QueueName:
+    Type: String
+    Default: LibrosaTransformsQueue
   BucketName:
     Type: String
     Default: dakobed-mir-upload-bucket
+
+
 Resources:
+  UploadApi:
+    Type: AWS::Serverless::Api
+    Properties:
+      Name: UploadApi
+      StageName: Prod
+      DefinitionUri: ./swagger.yaml
+
   Bucket:
     Type: AWS::S3::Bucket
     DependsOn:
@@ -19,6 +34,54 @@ Resources:
         LambdaConfigurations:
           - Event: s3:ObjectCreated:*
             Function: !GetAtt VerifyUploadFunction.Arn
+
+  PresignedPostUploadFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Timeout: 10
+      FunctionName: PresignedPostUploadFunction
+      Policies:
+        - S3CrudPolicy:
+            BucketName: !Ref BucketName
+        - SQSSendMessagePolicy:
+            QueueName: InitiateTransformsQueue
+        - AWSLambdaBasicExecutionRole
+        - DynamoDBCrudPolicy:
+            TableName: UserUploads
+      CodeUri: handlers/signedURL
+      Handler: app.lambda_handler
+      Runtime: python3.7
+
+      Layers:
+        - !ImportValue upload-authorization-layer-stack:AuthorizationLayer
+
+      Environment:
+        Variables:
+          UploadBucket: !Ref BucketName
+          userpool_id: !ImportValue upload-api-userpool-stack:UserPool
+          app_client_id: !ImportValue upload-api-userpool-stack:UserPoolClient
+          region: !Ref Region
+
+      Events:
+        UploadApi:
+          Type: Api
+          Properties:
+            RestApiId: !Ref UploadApi
+            Path: /signedURL
+            Method: POST
+
+
+  GatewayInvokeLambdaPermission:
+    Type: "AWS::Lambda::Permission"
+    DependsOn:
+    - UploadApi
+    - PresignedPostUploadFunction
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref PresignedPostUploadFunction
+      Principal: apigateway.amazonaws.com
+
+
 
   ProcessingLambdaPermission:
     Type: AWS::Lambda::Permission
